--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -6,6 +6,9 @@ jobs:
     first_job:
         runs-on: ubuntu-latest
         steps:
+        - name: checkout
+          uses: actions/checkout@v4
+          
         - name: welcome message 
           run: echo "welcome to actions"
         
@@ -14,6 +17,6 @@ jobs:
 
         - name: read file
           run: cat README.md
-          
+
 
 
